[package]
name = "gcalendar-next-event"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive", "string"] }
eyre = "0.6.12"
google-calendar = "0.7.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["tokio-macros", "rt-multi-thread"] }
url = "2.5.0"
xdg = "2.5.2"
